Fix #3686 fixed text overflow for contributors list (#3697)
* Fix #3686: Fixed text overflow for contributors list
Link: https://github.com/oppia/oppia/issues/3686

* Minor CSS change for contributors list element on info card

* Fix #3686 made suggested changes from review

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3394,12 +3394,12 @@ md-card.preview-conversation-skin-supplemental-card {
 
 .oppia-contributors-more-circle {
   background: #888;
-  border-radius: 50%;
-  border-color: black;
+  border-radius: 10%;
+  color: #fff;
   height: 20px;
-  padding-top: 3px;
-  text-align: center;
-  width: 20px;
+  min-width: 20px;
+  width: auto;
+
 }
 
 .oppia-info-card-bottom-row {
